# eml2text

./: LICENSE.txt  README.md  pyproject.toml  pyproject.toml-setuptools_scm  setup.cfg  setup.py  uninstall.sh
eml2text/: __main__.py
