[metadata]
name = eml2text
version = 0.1.0
license = MIT
license_file = LICENSE.txt
long_description = file: README.rst, CHANGES.rst
description = Convert mail file as text. For headers (From, To, Cc, Subject), MIME-Encoded text is converted, and mail bodies such as quoted printable encodes are converted to readable text.\nメールファイルをテキストとして変換する。 ヘッダー（From、To、Cc、Subject）については、MIME-Encodeされたテキストを変換し、また、quoted printable encodeされているようなメールボディを読み取り可能なテキストへ変換する。

author="unya"
author_email="unya@yk.rim.or.jp"
Source = https://github.com/jazzband/django-redshift-backend

[options]
packages = mail2text
install_requires =
    argparse

[options.entry_points]
console_scripts = eml2text = eml2text.__main__:main
